cmake_minimum_required (VERSION 2.6)
project (StackOverrun)
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
SET(GCC_COVERAGE_COMPILE_FLAGS "/GS- /W1 /GZ-")
SET(GCC_COVERAGE_LINK_FLAGS "/DYNAMICBASE:NO /NXCOMPAT:NO /SafeSeh:NO")

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")

add_executable(stackoverrun StackOverrun.c)

